k8s/deployment-dev.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: idpkit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: idpkit
  template:
    metadata:
      labels:
        app: idpkit
      annotations:
        deployment/id: "_DEFAULT_DEPLOYMENT_"
    spec:
      containers:
        - name: idpkit
          image: waltid/idpkit:latest
          volumeMounts:
            - name: idp-config
              mountPath: "/waltid/idp/config/"
              readOnly: true
            - mountPath: "/waltid/idp/data/"
              name: idp-data
            - name: idpkit-nft-key-config
              mountPath: "/waltid/idp/nftconfig/"
          args:
            - run
            - --bind-all
          ports:
            - containerPort: 8080
              name: http-api
      volumes:
        - name: idp-config
          configMap:
            name: idp-config
        - name: idp-data
          persistentVolumeClaim:
            claimName: idp-data-volume-claim
        - name: idpkit-nft-key-config
          secret:
            secretName: idpkit-nft-key-config
---
kind: Service
apiVersion: v1
metadata:
  name: idpkit
spec:
  ports:
    - name: http
      port: 80
      targetPort: http-api
      protocol: TCP
  selector:
    app: idpkit
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: idpkit
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - idp.walt-test.cloud
      secretName: idp-tls-secret
  rules:
    - host: idp.walt-test.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: idpkit
                port:
                  number: 80
